Add SonarQube integration with GitHub Actions
- Add SonarQube Maven plugin
- Create GitHub Actions workflow for CI/CD
- Configure SonarQube project properties
- Add JaCoCo coverage integration
- Include setup documentation

Features:
- Coverage reports in PRs
- Quality gate checks (90% coverage)
- Security vulnerability scanning
- Exclude UI/repository layers from coverage

--- a/software-project-main/pom.xml
+++ b/software-project-main/pom.xml
@@ -131,6 +131,9 @@
                                 <!-- Exclude only com.example.library package (App and DatabaseConnection) -->
                                 <exclude>com/example/library/*.class</exclude>
                                 
+                                <!-- Exclude repository bundle -->
+                                <exclude>com/example/library/repository/**/*.class</exclude>
+                                
                                 <!-- Existing excludes -->
                                 <exclude>com/example/library/ui/**/*.class</exclude>
                                 <exclude>com/example/library/ReservationFeatureTest.class</exclude>
@@ -170,11 +173,21 @@
                         <!-- Exclude only com.example.library package (App and DatabaseConnection) -->
                         <exclude>com/example/library/*.class</exclude>
                         
+                        <!-- Exclude repository bundle -->
+                        <exclude>com/example/library/repository/**/*.class</exclude>
+                        
                         <!-- Existing excludes -->
                         <exclude>com/example/library/ui/**/*.class</exclude>
                         <exclude>com/example/library/ReservationFeatureTest.class</exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            
+            <!-- SonarQube Maven Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version>
             </plugin>
         </plugins>
     </build>
